fix issue with filter fields getting cut off in IE

--- a/scss/components/_filters.scss
+++ b/scss/components/_filters.scss
@@ -20,7 +20,7 @@
     }
     .form-control, select {
       height: 28px;
-      padding: 6px 10px;
+      padding: 0 10px;
       &.daterange-picker {
         min-width: 235px;
       }
